# SyncTools

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs
src-tauri/src/commands/: cache.rs  job.rs  log.rs  mod.rs  shell.rs  sync.rs  test.rs  transfer.rs
src-tauri/src/core/: cache.rs  comparator.rs  conflict.rs  engine.rs  file_state.rs  mod.rs  scanner.rs  transfer.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/storage/: local.rs  mod.rs  s3.rs  webdav.rs
src-tauri/tools/: gen_ico.rs
src/components/: AnimatedProgress.tsx  BaseDialog.tsx  ConfirmDialog.tsx  ConflictDialog.tsx  ContextMenu.tsx  CreateJobDialog.tsx  DiffViewDialog.tsx  HistoryPanel.tsx  MessageDialog.tsx  SettingsDialog.tsx  Switch.tsx  TitleBar.tsx  Toast.tsx  index.ts
src/hooks/: index.ts  useAnimatedNumber.ts  useDialog.ts
src/lib/: constants.ts  store.ts  types.ts  utils.ts
