[package]
name = "synctools"
version = "1.0.0"
description = "A high-performance file sync and backup tool"
authors = ["you"]
edition = "2021"

[lib]
name = "synctools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
opendal = { version = "0.50", features = ["services-s3", "services-webdav", "services-fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
walkdir = "2"
notify = "7"
blake3 = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
regex = "1"
scopeguard = "1"

[dev-dependencies]
criterion = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
